--- a/projekt3/client/src/assets/style.css
+++ b/projekt3/client/src/assets/style.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 h1,
 h2 {
+  color: #31343A;
+  font-family: "Opens Sans", sans-serif;
   font-weight: normal;
+  text-shadow: 1px 4px 10px rgba(0, 0, 0, 0.05);
 }
 
 ul {
@@ -14,24 +17,116 @@ li {
   margin: 0 10px;
 }
 
-#nav-link {
+#nav {
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #31343A;
+}
+
+#nav .nav-link, #nav li, #nav router-link {
   text-decoration: none;
-  color: azure;
+  color: whitesmoke;
 }
 
-auction-card {
-  padding: 2%;
-  margin: 0 10px;
-  border-width: 1px;
-  border-color: azure;
-  -webkit-box-shadow: 0px 4px 10px rgba(96, 101, 105, 0.1);
-          box-shadow: 0px 4px 10px rgba(96, 101, 105, 0.1);
+.banner {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-#message-box {
-  padding: 5px;
-  border-style: solid;
-  border-color: black;
+.auction-card {
+  border-radius: 10px;
+  max-width: 500px;
+  position: relative;
+  padding: 10%;
+  margin: auto;
   border-width: 1px;
+  border-color: #31343A;
+  -webkit-box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+          box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+}
+
+.message-box {
+  border-radius: 30px;
+  max-width: 455px;
+  padding: 10px;
+  margin: auto;
+  -webkit-box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+          box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+}
+
+.convo {
+  border-radius: 10px;
+  max-width: 600px;
+  position: relative;
+  padding: 7%;
+  margin: auto;
+  border-width: 1px;
+  border-color: #31343A;
+  -webkit-box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+          box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+}
+
+.form-card {
+  border-radius: 10px;
+  max-width: 500px;
+  max-height: 500px;
+  position: relative;
+  padding: 5%;
+  margin: auto;
+  border-width: 1px;
+  border-color: #31343A;
+  -webkit-box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+          box-shadow: 3px 4px 10px rgba(49, 52, 58, 0.1);
+}
+
+.form-text {
+  color: #222;
+  background-color: #FFF;
+  border: 1px solid #DADEE8;
+  border-radius: 30px;
+  font-size: 14px;
+  font-family: "Nunito Sans", sans-serif;
+  line-height: 1.5;
+  padding: 10px;
+  display: block;
+  width: 90%;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.white-button {
+  margin: 10px;
+  border-radius: 30px;
+  border: 1px solid;
+  font-size: 14px;
+  font-family: "Opens Sans", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  line-height: 1.5;
+  padding: 10px 30px;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  color: #31343A;
+  background-color: whitesmoke;
+  border-color: whitesmoke;
+  -webkit-box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.btn--white:hover, .btn--white:focus {
+  color: #31343A;
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
 }
 /*# sourceMappingURL=style.css.map */
