--- a/projekt3/client/src/assets/style.css
+++ b/projekt3/client/src/assets/style.css
@@ -100,6 +100,11 @@ li {
   transition: all 0.2s linear;
 }
 
+.warning-label {
+  font-size: small;
+  color: #ce5050 !important;
+}
+
 .white-button {
   margin: 10px;
   border-radius: 30px;
@@ -128,5 +133,17 @@ li {
   color: #31343A;
   background-color: #FFFFFF;
   border-color: #FFFFFF;
+}
+
+.currentUserSender {
+  padding: 2px;
+  text-align: left !important;
+  color: #a1a6ad;
+}
+
+.otherUserSender {
+  padding: 2px;
+  text-align: right !important;
+  color: #a1a6ad;
 }
 /*# sourceMappingURL=style.css.map */
