--- a/projekt3/client/src/assets/style.scss
+++ b/projekt3/client/src/assets/style.scss
@@ -93,6 +93,11 @@ li {
   width: 90%;
   transition: all 0.2s linear; }
 
+.warning-label{
+  font-size: small;
+  color: #ce5050 !important;
+}
+
 .white-button {
   margin: 10px;
   border-radius: 30px;
@@ -117,3 +122,16 @@ li {
     color: #31343A;
     background-color: #FFFFFF;
     border-color: #FFFFFF; }
+
+.currentUserSender{
+      padding: 2px;
+      text-align: left !important;
+      color: #a1a6ad;
+    }
+    
+.otherUserSender{
+      padding: 2px;
+      text-align: right !important;
+      color: #a1a6ad;
+    }
+    
